    Added Glowing Obsidian Button
    Added Glowing Obsidian Door
    Added Glowing Obsidian Trapdoor
    Added Compressed Cactus
    Added Cactus Door
    Added Cactus Trapdoor
    Added Cactus Bookshelf
    Added Cactus Fence
    Added Cactus Fence Gate
    Added Cactus Pressure Plate
    Added Compressed Cactus Chest (Normal and Trapped)
    Added Cactus tools
    Added Cactus Stick
    Added Cactus Stairs
    Added Salt Ore
    Added Salt
    Added Salt Block
    Added Salt Lamp
    Added Nether Variants of gold and silver ores
    Adjusted the blast resistance of all the blocks so they're correct
    Resolved some recipe conflicts in my own crafting recipes

0.12A (The Structures Update):
    Added the following structures to Minecraft:
        Shipwreck (has Guardian spawners in it!)
        Underwater Village
        Brick Pyramid (A spinoff of the brick pyramid from Indev, has a dungeon inside)
        Abandoned Survival Houses (has different variants depending on biome)
        Abandoned Mining Base (Extremely dangerous! Has 2 creeper spawners inside!)
        Mesa Temple (A variant of the vanilla desert temple)
        Rogue Nether Portals
        Wicker Man Monument (inspired by the song "The Wicker Man" by Iron Maiden)
        Added 3 structures created by my friend, Attie (2 shrines of his enderman, Bill, and his shulker, John, and a tank for his creeper, Jeff)
    Finally got gold generating in the nether!
    Optimized the crafting recipes for the colored redstone lamps (they also now use oredict defs for the dyes, so you could use other mod's dye for making them if they have an oredict definition)
    Optimized ore generation
    Fixed a crafting recipe bug for the silver pickaxe
    Fixed a texture error for the Brown Redstone Lamp item (it had the same texture as the Blue Redstone Lamp)
    Fixed a block model bug with the cactus trapdoor when it had "half=top" as its metadata
    Added Dirt, Sand, and Clay to the ocean floor