@@ -1,3 +1,5 @@
 Nether Noah's Paradise Mod is a mod I decided to make for the heck of it! I started from the idea of me adding my own custom things to minecraft just like I can create my own custom textures for it in my resource pack! My friends and I currently use it in our Minecraft worlds. I even restored some old features like glowing obsidian from Minecraft Pocket Edition and the brick pyramid from Indev!
 
 Hopefully, having created this mod could help me get a high paying job in future since my brother told me that java programmers make about $100K USD per year!
+
+Feel free to use of this code for your needs. But I would really appreciate it if you gave me some credit for my work.
