@@ -2,6 +2,8 @@ package com.NetherNoah.ParadiseMod.blocks.resourceBlocks;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.creativetab.CreativeTabs;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.IBlockAccess;
 public class SaltBlock extends Block{
 	public SaltBlock() {
 		super(Material.IRON);
@@ -12,4 +14,9 @@ public class SaltBlock extends Block{
 		setCreativeTab(CreativeTabs.BUILDING_BLOCKS);
 		setHarvestLevel("pickaxe", 0);
 	}
+	@Override
+    public boolean isBeaconBase(IBlockAccess worldObj, BlockPos pos, BlockPos beacon)
+    {
+        return true;
+    }
 }
