@@ -3,6 +3,8 @@ package com.NetherNoah.ParadiseMod.blocks.resourceBlocks;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.creativetab.CreativeTabs;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.IBlockAccess;
 
 public class SilverBlock extends Block {
 	public SilverBlock() {
@@ -15,4 +17,9 @@ public class SilverBlock extends Block {
 		setSoundType(blockSoundType.METAL);
 		setHarvestLevel("pickaxe", 2);
 	}
+	@Override
+    public boolean isBeaconBase(IBlockAccess worldObj, BlockPos pos, BlockPos beacon)
+    {
+        return true;
+    }
 }
