@@ -2,6 +2,8 @@ package com.NetherNoah.ParadiseMod.blocks.resourceBlocks;
 import net.minecraft.block.Block;
 import net.minecraft.block.material.Material;
 import net.minecraft.creativetab.CreativeTabs;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.IBlockAccess;
 public class blazeBlock extends Block{
 	public blazeBlock() {
 		super(Material.IRON);
@@ -14,4 +16,9 @@ public class blazeBlock extends Block{
 		setHarvestLevel("pickaxe", 0);
 		setLightLevel(1F);
 	}
+	@Override
+    public boolean isBeaconBase(IBlockAccess worldObj, BlockPos pos, BlockPos beacon)
+    {
+        return true;
+    }
 }
