@@ -3,6 +3,8 @@ package com.NetherNoah.ParadiseMod.blocks.resourceBlocks;
 import net.minecraft.block.BlockFalling;
 import net.minecraft.block.material.Material;
 import net.minecraft.creativetab.CreativeTabs;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.world.IBlockAccess;
 
 public class sugarBlock extends BlockFalling{
 	public sugarBlock() {
@@ -14,4 +16,9 @@ public class sugarBlock extends BlockFalling{
 		setSoundType(blockSoundType.SAND);
 		setCreativeTab(CreativeTabs.BUILDING_BLOCKS);
 	}
+	@Override
+    public boolean isBeaconBase(IBlockAccess worldObj, BlockPos pos, BlockPos beacon)
+    {
+        return true;
+    }
 }
